Corrected run tasks for demos