@@ -59,10 +59,13 @@ jar {
     baseName 'org.jvoicexml.demo.luis'
 }
 
-mainClassName = "org.jvoicexml.demo.luis.LUISDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy" ]
-
 run {
     dependsOn xslt
+    
+    mainClassName = "org.jvoicexml.demo.luis.LUISDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
 }
 
