@@ -29,6 +29,10 @@ jar {
     baseName 'org.jvoicexml.demo.mmi.simpledemo'
 }
 
-mainClassName = "org.jvoicexml.demo.mmi.simpledemo.SimpleMmiDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/resources/jvoicexml.policy" ]
-
+run {
+    mainClassName = "org.jvoicexml.demo.mmi.simpledemo.SimpleMmiDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
+}
