@@ -58,9 +58,12 @@ jar {
     baseName 'org.jvoicexml.demo.objecttagdemo'
 }
 
-mainClassName = "org.jvoicexml.demo.objecttagdemo.ObjectTagDemo"
-applicationDefaultJvmArgs = ["-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy" ]
-
 run {
     dependsOn xslt
+
+    mainClassName = "org.jvoicexml.demo.objecttagdemo.ObjectTagDemo"
+    classpath += files("${buildDir}/resources/main")
+    jvmArgs = ["-Djvoicexml.config=${buildDir}/resources/main",
+               "-Djava.security.manager",
+               "-Djava.security.policy=${projectDir}/src/main/config/jvoicexml.policy"]
 }
